--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <tr id="tr_desc">
                 <td>Description</td>
                 <td>
-                    <TEXTAREA rows="3"cols="30" name="chdesc" id="chdesc">Description du channel</TEXTAREA>
+                    <TEXTAREA rows="3"cols="30" name="chdesc" id="chdesc">Channel description</TEXTAREA>
                 </td>
             </tr>
             <tr id="tr_priority">
