--- a/hConsole v0.5/index.html
+++ b/hConsole v0.5/index.html
@@ -68,19 +68,19 @@
               <div class="control-group">
                   <label class="control-label" for="inputUser">User</label>
                   <div class="controls">
-                      <input type="text" id="inputUser" placeholder="admin@localhost" value="admin@localhost">
+                      <input type="text" id="inputUser" placeholder="admin@localhost" value="admin@socialtv">
                   </div>
               </div>
               <div class="control-group">
                   <label class="control-label" for="inputPassword">Password</label>
                   <div class="controls">
-                      <input type="password" id="inputPassword" placeholder="Password" value="admin">
+                      <input type="password" id="inputPassword" placeholder="Password" value="">
                   </div>
               </div>
               <div class="control-group">
                   <label class="control-label" for="inputEndpoint">Endpoint</label>
                   <div class="controls">
-                      <input type="text" id="inputEndpoint" placeholder="http://localhost:8080" value="http://localhost:8080">
+                      <input type="text" id="inputEndpoint" placeholder="http://localhost:8080" value="http://178.33.109.145:8080">
                   </div>
               </div>
           </form>
