--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,11 @@
 
 <div class="container" data-ng-view></div>
 
+<!-- build:js scripts/vendor/hubiquitus4js.js -->
+<script src="components/hubiquitus4js/hubiquitus-min.js"></script>
+<!-- endbuild -->
 <!-- build:js scripts/vendor/jquery.js -->
 <script src="components/jquery/jquery.js"></script>
-<!-- endbuild -->
-<!-- build:js scripts/vendor/hubiquitus4js.js -->
-<script data-main="components/hubiquitus4js/hubiquitus" src="components/requirejs/require.js"></script>
 <!-- endbuild -->
 <!-- build:js scripts/vendor/angular.js -->
 <script src="components/angular/angular.js"></script>
