--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="UTF-8"/>
     <title>hConsole</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -14,7 +12,7 @@
     <div class="navbar-inner">
         <div class="container">
             <span class="brand">
-                <img src="images/hubiquitus.png"/>Hubiquitus Console
+                <img src="images/{{ $root.state || 'disconnected' }}.png"/>Hubiquitus Console
                 <span data-ng-cloack data-ng-show="$root.url">@ {{ $root.url }}</span>
             </span>
 
