--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 
             <div class="nav-collapse collapse" data-ng-cloack data-ng-show="$root.url">
                 <p class="navbar-text pull-right">
+                    <a href="#" class="navbar-link" data-ng-click="nodeView($event)">node view</a> |
+                    <a href="#" class="navbar-link" data-ng-click="graphView($event)">graph view</a> |
                     <a href="#" class="navbar-link" data-ng-click="disconnect($event)">disconnect</a>
                 </p>
             </div>
@@ -43,9 +45,14 @@
 <!-- build:js scripts/vendor/highcharts.js -->
 <script src="components/highcharts/highcharts.src.js"></script>
 <!-- endbuild -->
+
+
+<script src="http://d3js.org/d3.v3.js"></script>
+
 <!-- build:js scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/node.js"></script>
+<script src="scripts/controllers/graph.js"></script>
 <script src="scripts/controllers/connect.js"></script>
 <script src="scripts/controllers/navbar.js"></script>
 <script src="scripts/directives/chart.js"></script>
