add update hconsole

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,8 @@
             <div class="nav-collapse collapse" data-ng-cloack data-ng-show="$root.url">
                 <p class="navbar-text pull-right">
                     <a href="#" class="navbar-link" data-ng-click="nodeView($event)">node view</a> |
-                    <a href="#" class="navbar-link" data-ng-click="graphView($event)">graph view</a> |
+                    <a href="#" class="navbar-link" data-ng-click="physicView($event)">physical distribution</a> |
+                    <a href="#" class="navbar-link" data-ng-click="logicView($event)">logical distribution</a> |
                     <a href="#" class="navbar-link" data-ng-click="disconnect($event)">disconnect</a>
                 </p>
             </div>
@@ -52,11 +53,15 @@
 <!-- build:js scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/node.js"></script>
-<script src="scripts/controllers/graph.js"></script>
+<script src="scripts/controllers/logicalDistribution.js"></script>
+<script src="scripts/controllers/physicalDistribution.js"></script>
 <script src="scripts/controllers/connect.js"></script>
 <script src="scripts/controllers/navbar.js"></script>
 <script src="scripts/directives/chart.js"></script>
 <script src="scripts/services/hubiquitus.js"></script>
+<script src="scripts/services/circlegraph.js"></script>
+<script src="scripts/services/treegraph.js"></script>
+<script src="scripts/services/datatree.js"></script>
 <!-- endbuild -->
 
 </body>
